service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supermario
  labels:
    name: supermario
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    name: supermario
