route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: supermario
  labels:
    name: supermario
spec:
  path: "/"
  to:
    kind: Service
    name: supermario
